--- a/.classpath
+++ b/.classpath
@@ -1,52 +1,52 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="D:/Java Workspace/openjfx-21.0.5_windows-x64_bin-sdk/javafx-sdk-21.0.5/lib/javafx.base.jar">
+	<classpathentry kind="lib" path="C:/Users/steve/Downloads/openjfx-20.0.1_windows-x64_bin-sdk/javafx-sdk-20.0.1/lib/javafx.base.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:/Java Workspace/openjfx-21.0.5_windows-x64_bin-sdk/javafx-sdk-21.0.5/lib/javafx.controls.jar">
+	<classpathentry kind="lib" path="C:/Users/steve/Downloads/openjfx-20.0.1_windows-x64_bin-sdk/javafx-sdk-20.0.1/lib/javafx.controls.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:/Java Workspace/openjfx-21.0.5_windows-x64_bin-sdk/javafx-sdk-21.0.5/lib/javafx.fxml.jar">
+	<classpathentry kind="lib" path="C:/Users/steve/Downloads/openjfx-20.0.1_windows-x64_bin-sdk/javafx-sdk-20.0.1/lib/javafx.fxml.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:/Java Workspace/openjfx-21.0.5_windows-x64_bin-sdk/javafx-sdk-21.0.5/lib/javafx.graphics.jar">
+	<classpathentry kind="lib" path="C:/Users/steve/Downloads/openjfx-20.0.1_windows-x64_bin-sdk/javafx-sdk-20.0.1/lib/javafx.graphics.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:/Java Workspace/openjfx-21.0.5_windows-x64_bin-sdk/javafx-sdk-21.0.5/lib/javafx.media.jar">
+	<classpathentry kind="lib" path="C:/Users/steve/Downloads/openjfx-20.0.1_windows-x64_bin-sdk/javafx-sdk-20.0.1/lib/javafx.media.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:/Java Workspace/openjfx-21.0.5_windows-x64_bin-sdk/javafx-sdk-21.0.5/lib/javafx.swing.jar">
+	<classpathentry kind="lib" path="C:/Users/steve/Downloads/openjfx-20.0.1_windows-x64_bin-sdk/javafx-sdk-20.0.1/lib/javafx.swing.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:/Java Workspace/openjfx-21.0.5_windows-x64_bin-sdk/javafx-sdk-21.0.5/lib/javafx.web.jar">
+	<classpathentry kind="lib" path="C:/Users/steve/Downloads/openjfx-20.0.1_windows-x64_bin-sdk/javafx-sdk-20.0.1/lib/javafx.web.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:/Java Workspace/openjfx-21.0.5_windows-x64_bin-sdk/javafx-sdk-21.0.5/lib/javafx-swt.jar">
+	<classpathentry kind="lib" path="C:/Users/steve/Downloads/openjfx-20.0.1_windows-x64_bin-sdk/javafx-sdk-20.0.1/lib/javafx-swt.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:/Java Workspace/MySqlJdbcDriver/mysql-connector-j-9.1.0.jar">
+	<classpathentry kind="lib" path="C:/Users/steve/Downloads/MySqlJdbcDriver/mysql-connector-j-8.3.0.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
